--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </header>
     <section id="banner" class="banner">
         <picture>
-            <source srcset="imagem/stampa-su-tela-spider-man-miles-morales-electric-fist-swing-i102943.jpg" media="(max-width: 480px)">
+            <source srcset="IMAGEM TAMANHOS CERTOS/milesbanner2.jpg" media="(max-width: 480px)">
             <img src="IMAGEM TAMANHOS CERTOS/Banner.png" alt="miles">
         </picture>
     </section>
